fully responsive navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,19 +10,27 @@ body {
     background-color:gray;
 }
 
-.navbar-collapse .navbar-nav .nav-item .nav-link,
-#navbar-custom .navbar-brand {
-    color:mediumvioletred;
-    
-}
-
-#navbar-custom .navbar-brand {
-    font-family: 'Dosis', sans-serif;
-    font-size: 3vw;
+.navbar-collapse .navbar-nav .nav-item .nav-link {
+    color: rgb(72, 40, 146);
+    font-size: 1.5vw;
 }
 
 
-.nav-item .nav-link:hover {
+.navbar-collapse .navbar-nav .nav-item .nav-link:hover {
     color:darkmagenta;
 }
 
+
+
+#navbar-custom .navbar-brand {
+    color:mediumvioletred;
+    font-size: 3vw;
+    font-family: 'Dosis', sans-serif;
+}
+
+
+
+.navbar-brand img {
+    width: 3vw;
+    height: 3vw;
+}
