--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,56 @@
-
+html {
+    scroll-behavior: smooth;
+  }
+  
 body{
     color: rgb(72, 40, 146);
-    background-image: url("assets/bamboo-retouched.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
     font-family: 'Dosis', sans-serif;
+    background-image: url("assets/bamboo-fill.jpg");
+    background-repeat: repeat;
+    background-size: cover;
+    
+    padding-top: 11vw;
+    padding-bottom: 18vw;
+    min-width: 100%;
+    min-height: 100%;
+
+}
+
+/* width position: fixed; 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track 
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle 
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover 
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+    /**
+    
     padding-top: 10vw;
     padding-bottom: 12vw;
-}
+
+    #bg {
+        position: fixed; 
+        top: 0; 
+        left: 0; 
+          
+         min-width: 100%;
+        min-height: 100%;
+      }
+        /* Preserve aspet ratio */
+       
+
 
 /**  Start Navigation Bar Styling **/ 
  #navbar-custom {
