--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,42 +15,6 @@ body{
 
 }
 
-/* width position: fixed; 
-::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track 
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle 
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover 
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-    /**
-    
-    padding-top: 10vw;
-    padding-bottom: 12vw;
-
-    #bg {
-        position: fixed; 
-        top: 0; 
-        left: 0; 
-          
-         min-width: 100%;
-        min-height: 100%;
-      }
-        /* Preserve aspet ratio */
-       
-
-
 /**  Start Navigation Bar Styling **/ 
  #navbar-custom {
     background-color:rgb(82, 139, 158);
@@ -119,26 +83,35 @@ body{
 }
 /** End Contact Greeting Box Styling**/
 
-/** Start Contact Info Box Styling**/
-#contact-box {
-    border-color:rgb(240, 149, 14);
-    border-width: 15px;
-    border-style: solid;
-    background-color:lightblue;
-    color:rgb(72, 40, 146);
-    font-size: 5.8vw;
-    text-align:end;
-}
-
+/** Start Contact Content Form Styling**/
 .form-text {
     text-align: end;
 }
-
 
 form label {
     font-size: 1em;
     font-weight: bolder;
 }
+/** End Contact Content Form Styling**/
+
+/** Start Portfolio Greeting Styling**/
+#portfolio-greeting {
+    border-color:rgb(240, 149, 14);
+    border-width: 15px;
+    border-style: solid;
+    background-color:lightblue;
+    color:rgb(72, 40, 146);
+    font-size: 5.5vw;
+    text-align:end;
+}
+
+#custom-portfolio-container {
+    background-image: url("assets/office-table.jpg");   
+    background-repeat: no-repeat;
+    background-size: cover;     
+}
+/** End Portfolio Greeting Styling**/
+
 
 /** Start Footer Styling**/
 .custom-footer {
